[gd_scene load_steps=5 format=3 uid="uid://e0yq1xouhl6x"]

[ext_resource type="Script" path="res://uis/MenuMain/MainMenu.gd" id="1_y10n5"]
[ext_resource type="FontFile" uid="uid://7lq4ug78jinv" path="res://assets/nordicfont/Tundra.ttf" id="2_ws03q"]
[ext_resource type="Script" path="res://ButtonFullscreen.gd" id="3_13q0g"]

[sub_resource type="LabelSettings" id="LabelSettings_6d5op"]
font = ExtResource("2_ws03q")
font_size = 64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y10n5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0, 0.956863, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_top = 128.0
offset_right = 960.0
offset_bottom = 218.0
grow_horizontal = 2
text = "NORDIK KONQUER"
label_settings = SubResource("LabelSettings_6d5op")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -156.0
offset_right = 128.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ws03q")
theme_override_font_sizes/font_size = 24
text = "JOGAR"

[node name="Instructions" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ws03q")
theme_override_font_sizes/font_size = 24
text = "INSTRUCOES"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ws03q")
theme_override_font_sizes/font_size = 24
text = "CRÃ‰DITOS"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ws03q")
theme_override_font_sizes/font_size = 24
text = "SAIR"

[node name="UTFPR" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -968.0
offset_top = -192.0
offset_right = 952.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_ws03q")
theme_override_font_sizes/font_size = 18
text = "UTFPR 2023"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonFullscreen" type="Button" parent="."]
offset_left = 1776.0
offset_top = 10.0
offset_right = 1914.0
offset_bottom = 41.0
text = "TELA CHEIA (F11)"
script = ExtResource("3_13q0g")

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="ButtonFullscreen" to="ButtonFullscreen" method="_on_toggled"]
